--- a/device/public/peerconnection/index.html
+++ b/device/public/peerconnection/index.html
@@ -39,7 +39,7 @@
 			<div id="preview">
 				<div >
 					<h2>Local:</h2>
-					<video id="localVideo" autoplay playsinline></video>
+					<video id="localVideo" autoplay playsinline muted></video>
 				</div>
 				<div>
 					<h2>Remote:</h2>
