--- a/device/public/peerconnection/index.html
+++ b/device/public/peerconnection/index.html
@@ -80,7 +80,7 @@
 				</div>
 			</div>
 			<div id="content">
-			<img src="./bg1.">	
+			<img src="./bg/left.jpeg">	
 	                <div>
                         
                                 <div>
@@ -96,6 +96,7 @@
 				</div>
 				<button disabled  id="send">Send</button>
                         </div>  
+			<img src="./bg/right.jpeg">
 			</div>
                 
 		</div>
